kubernetes/30-NetworkPolicy/manifests/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: rosa-lab
  labels:
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: nginx
          image: nginx:1.27-alpine
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: rosa-lab
spec:
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 80
