kubernetes/30-NetworkPolicy/manifests/allow-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: web-allow-frontend
  namespace: rosa-lab
spec:
  podSelector:
    matchLabels:
      app: web
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              role: frontend   # role=frontend Pod에서 오는 것만 허용
      ports:
        - protocol: TCP
          port: 80
